Breathe 2024: Fix horizontal overflow on handbook pages
Fixes https://github.com/WordPress/wordpress.org/issues/396


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14107 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -2070,10 +2070,13 @@ nav.handbook-navigation .nav-links a[rel="next"] {
 
 .post-type-archive-handbook #main:has(#secondary),
 .single-handbook #main:has(#secondary) {
+	--column-gap: 60px;
+	--secondary-width: 240px;
+
 	display: grid;
-	grid-template-columns: 25% auto;
+	grid-template-columns: var(--secondary-width) calc(100% - var(--secondary-width) - var(--column-gap));
 	grid-template-rows: auto;
-	column-gap: 60px;
+	column-gap: var(--column-gap);
 	padding-top: var(--wp--preset--spacing--40);
 }
 
@@ -2085,8 +2088,7 @@ nav.handbook-navigation .nav-links a[rel="next"] {
 @media (max-width: 876px) {
 	post-type-archive-handbook #main:has(#secondary),
 	.single-handbook #main:has(#secondary) {
-		grid-template-columns: auto;
-		column-gap: unset;
+		display: block;
 	}
 }
 
